Add media queries for tablet and desktop

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <div class="wrapper">
       <div class="mainContent">
       </div>
-      <div class="subContent1">
-      </div>
-      <div class="subContent2">
+      <div class="subContent">
+        <div class="subContent1">
+        </div>
+        <div class="subContent2">
+        </div>
       </div>
     </div>
   </body>
