--- a/mondrian.html
+++ b/mondrian.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/mondrian.css">
     <meta name="viewport" content="width=device-width">
     <title>Modrian</title>
   </head>
