Style for 1024px screen size

--- a/basicGallery.html
+++ b/basicGallery.html
@@ -3,30 +3,18 @@
   <head>
     <link rel="stylesheet" href="css/basicGallery.css">
     <meta name="viewport" content="width=device-width">
-    <title>Modrian</title>
+    <title>Basic Gallery</title>
   </head>
   <body>
     <div class="nav">
     </div>
-    <div class="gallery">
-      <div class="galleryItem">
+    <div class="wrapper">
         <img src="img/black-box.png">
-      </div>
-      <div class="galleryItem">
         <img src="img/black-box.png">
-      </div>
-      <div class="galleryItem">
         <img src="img/black-box.png">
-      </div>
-      <div class="galleryItem">
         <img src="img/black-box.png">
-      </div>
-      <div class="galleryItem">
         <img src="img/black-box.png">
-      </div>
-      <div class="galleryItem">
         <img src="img/black-box.png">
-      </div>
     </div>
 
 
