Finish mobile styling

--- a/featuredItems.html
+++ b/featuredItems.html
@@ -20,13 +20,29 @@
       </div>
     </div>
 
-    <!-- <div class="wrapper">
-        <img src="img/black-box.png">
-        <img src="img/black-box.png">
-        <img src="img/black-box.png">
-        <img src="img/black-box.png">
-        <img src="img/black-box.png">
-        <img src="img/black-box.png">
-    </div> -->
+    <div class="featured">
+      <img src="img/black-square.png">
+      <h3>H3 text goes here.</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl. Donec pharetra pharetra massa, a iaculis lorem ultrices id. Duis in accumsan diam, sed convallis justo.</p>
+    </div>
+
+    <div class="featured">
+      <img src="img/black-square.png">
+      <h3>H3 text goes here.</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl. Donec pharetra pharetra massa, a iaculis lorem ultrices id. Duis in accumsan diam, sed convallis justo.</p>
+    </div>
+
+    <div class="featured">
+      <img src="img/black-square.png">
+      <h3>H3 text goes here.</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl. Donec pharetra pharetra massa, a iaculis lorem ultrices id. Duis in accumsan diam, sed convallis justo.</p>
+    </div>
+
+    <div class="featured">
+      <img src="img/black-square.png">
+      <h3>H3 text goes here.</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl. Donec pharetra pharetra massa, a iaculis lorem ultrices id. Duis in accumsan diam, sed convallis justo.</p>
+    </div>
+
   </body>
 </html>
