--- a/column-flip.html
+++ b/column-flip.html
@@ -10,6 +10,7 @@
       <nav>
         <img class="logo" src="img/black-square.png">
         <p class="logoText">Logo</p>
+      </nav>
 
         <ul>
           <li>Item 1</li>
@@ -17,14 +18,49 @@
           <li>Item 3</li>
           <li>Item 4</li>
         </ul>
-        <h3>LOREM IPSUM</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl. Donec pharetra pharetra massa, a iaculis lorem ultrices id. Duis in accumsan diam, sed convallis justo.</p>
-        <img class="logoBig" src="img/black-square.png">
-
-        <img class="subImg" src="img/black-box.png">
-        <img class="subImg" src="img/black-box.png">
-
-      </nav>
+        <div class="mainContent">
+          <div class="mainText">
+            <h3>LOREM IPSUM</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl. Donec pharetra pharetra massa, a iaculis lorem ultrices id. Duis in accumsan diam, sed convallis justo. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl. Donec pharetra pharetra massa, a iaculis lorem ultrices id. Duis in accumsan diam, sed convallis justo.</p>
+          </div>
+          <img class="logoBig" src="img/black-square.png">
+        </div>
+        <div class="imgColumn">
+          <img class="subImg" src="img/black-box.png">
+          <img class="subImg" src="img/black-box.png">
+          <img class="subImg" src="img/black-box.png">
+        </div>
+        <div class="textColumn">
+          <p><strong>LOREM IPSUM</strong></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
+          <p><strong>LOREM IPSUM</strong></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
+          <p><strong>LOREM IPSUM</strong></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
+        </div>
+        <div class="imgTextColumn">
+          <div class="item">
+            <img class="smallSquare" src="img/black-square.png">
+            <div class="smallText">
+              <p><strong>LOREM IPSUM</strong></p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
+            </div>
+          </div>
+          <div class="item">
+            <img class="smallSquare" src="img/black-square.png">
+            <div class="smallText">
+              <p><strong>LOREM IPSUM</strong></p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
+            </div>
+          </div>
+          <div class="item">
+            <img class="smallSquare" src="img/black-square.png">
+            <div class="smallText">
+              <p><strong>LOREM IPSUM</strong></p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
+            </div>
+          </div>
+        </div>
     </div>
   </body>
 </html>
