--- a/column-flip.html
+++ b/column-flip.html
@@ -7,17 +7,19 @@
   </head>
   <body>
     <div class="container">
-      <nav>
-        <img class="logo" src="img/black-square.png">
-        <p class="logoText">Logo</p>
-      </nav>
+      <div class="topBar">
+        <nav>
+          <img class="logo" src="img/black-square.png">
+          <p class="logoText">Logo</p>
+        </nav>
 
-        <ul>
-          <li>Item 1</li>
-          <li>Item 2</li>
-          <li>Item 3</li>
-          <li>Item 4</li>
-        </ul>
+          <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+            <li>Item 4</li>
+          </ul>
+        </div>
         <div class="mainContent">
           <div class="mainText">
             <h3>LOREM IPSUM</h3>
@@ -32,25 +34,25 @@
         </div>
         <div class="textColumn">
           <p><strong>LOREM IPSUM</strong></p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
           <p><strong>LOREM IPSUM</strong></p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
           <p><strong>LOREM IPSUM</strong></p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
         </div>
         <div class="imgTextColumn">
           <div class="item">
             <img class="smallSquare" src="img/black-square.png">
             <div class="smallText">
               <p><strong>LOREM IPSUM</strong></p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
             </div>
           </div>
           <div class="item">
             <img class="smallSquare" src="img/black-square.png">
             <div class="smallText">
               <p><strong>LOREM IPSUM</strong></p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dignissim augue, non consectetur nibh. Nunc metus lectus, ornare quis ex ut, commodo luctus nisl.</p>
             </div>
           </div>
           <div class="item">
